--- a/vue-src/src/assets/styles/reset.css
+++ b/vue-src/src/assets/styles/reset.css
@@ -1,5 +1,8 @@
 body {
   margin: 0;
+  height: 100vh;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 a {
@@ -8,4 +11,8 @@ a {
 
 p {
   margin: 0
+}
+
+ul {
+  list-style: none;
 }
